# skaild2

./: .env.example  .gitignore  Cargo.toml  DOCKER.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
_bmad-output/brainstorming/: brainstorming-session-2026-02-18.md
_bmad-output/implementation-artifacts/: 1-0-initial-project-setup-from-starter-templates.md  1-1-single-host-compose-deployment-with-first-admin-login.md  2-1-register-first-upstream-application.md  2-2-define-basic-route-and-access-mode.md  2-3-connection-test-for-routes.md  project-plan.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-02-18.md  prd.md  ux-design-specification.md
_bmad/_config/: agent-manifest.csv  bmad-help.csv  files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
admin-ui/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
admin-ui/src/: App.test.tsx  App.tsx  main.tsx  (+1 more)
crates/control-plane/: Cargo.toml  Dockerfile
crates/control-plane/src/: lib.rs  main.rs  state.rs
crates/control-plane/src/api/: applications.rs  auth.rs  mod.rs  routes.rs  setup.rs
crates/control-plane/tests/: applications_flow.rs  auth_flow.rs  connection_test_flow.rs  routes_flow.rs
crates/gateway/: Cargo.toml  Dockerfile
crates/gateway/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/shared/src/models/: admin.rs  application.rs  mod.rs  route.rs
migrations/: 20260224000001_create_admins.sql  20260224000002_add_admin_name.sql  20260309000001_create_applications.sql  20260310000001_create_routes.sql
(+13 files in other folders)
