[package]
name = "control-plane"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "control-plane"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono"] }
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-sessions = "0.11"
tower-sessions-redis-store = "0.11"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
time = "0.3"

[dev-dependencies]
hyper = "1"
tower = "0.5"
serial_test = { version = "3", features = ["file_locks"] }
